# libstk

./: AUTHORS  ChangeLog  DEPS  Makefile.am  README  TODO  autogen.sh  configure_all.sh  cvs_users  libstk.pws
doc/: Doxyfile  Makefile.am  coding_standards  doxygen_dummies.h  gpl_license.txt  htmlchunkedsheet.xsl  irc_08032003_topics.txt  irc_14042003_session.txt  irc_14072003_session.txt  irc_27062003_session.txt  irc_29042003_session.txt  libstk.xml  license.txt  mozilla_license.txt  process_xml.sh  qt_license.txt
images/: libstk::org.xcf  libstk::squares.xcf
include/: footer.php  header.php
libstk/: ChangeLog  DEPS  Makefile.am  README  TODO  autogen.sh  carter_irc.txt  combiners.h  configure.in  configure_all.sh  contact.php  container.cpp  container.h  event_producer_sdl.h  event_system.cpp  glyph.h  hotkey.h  index.php  label.cpp  label.h  libstk.pc.in  libstk.pws  list_template.h  logging.h  overview.php  progress.h  project  read_dir.cpp  rectangle.cpp  rectangle.h  regen_changelog.sh  scroll_box.cpp  scroll_model.cpp  sdl_data.cpp  source_header.txt  spinner.cpp  spreadsheet.cpp  spreadsheet.h  stk_c_wrapper.cpp  surface_bitmap.cpp  (+7 more)
libstk.old/libstk/: Makefile.am  aa_filter.h  application.cpp  backend_dfb.cpp  button.cpp  button.h  color_manager.cpp  drawable.h  event.h  event_producer.h  font.cpp  image_panel.h  list_item.cpp  list_item.h  list_item_userdata.h  logging.cpp  overlay_sdl.h  ownerdraw_widget.cpp  point.h  rectangle.cpp  sdl_data.h  stk_types.h  surface.h  surface_sdl.h
libstk.old/libstk/aa_filters/: aa_filter_linear_m1.35.h  aa_filter_linear_m1.h
libstk/doc/: Doxyfile  coding_standards  dvhart_carter_architecture.txt  irc_05052003_session.txt  irc_08032003_session.txt  irc_26042003_session.txt  lgpl_license.txt  libstk.xml  license.txt  process_xml.sh  uml.dia  widget_tree.txt
libstk/doc/dot_files/: widget_tree_example.dot
libstk/fonts/: copyright
libstk/images/: libstk::org.xcf
libstk/include/: javascript.js  menu.php  theme.css
libstk/libstk/: Makefile.am  aa_filter.h  aa_filter_linear_m1.25.h  aa_filter_linear_m1.3.h  aa_filter_linear_m1.5.h  aa_filter_linear_m2.h  app.cpp  app.h  application.cpp  application.h  backend_dfb.cpp  backend_dfb.h  button.cpp  button.h  color_manager.cpp  color_manager.h  combiners.h  combo.cpp  combo.h  component.h  config.h.in  container.cpp  container.h  decorator.h  drawable.h  edge.h  edit_box.cpp  edit_box.h  event.h  event_handler.h  event_producer.h  event_producer_dfb.cpp  event_producer_dfb.h  event_producer_elotouch.cpp  event_producer_elotouch.h  event_producer_input.cpp  event_producer_input.h  event_producer_sdl.cpp  event_producer_sdl.h  event_system.cpp  (+116 more)
libstk/libstk/aa_filters/: aa_filter_linear_m1.75.h
libstk/test/: Makefile.am  dihmen.cpp  hello_world.cpp  hello_world_dfb.cpp  hello_world_fbdev.cpp  hydra.cpp  parrots.ppm  surface_bm.cpp  test_app.cpp  test_app_dfb.cpp  test_app_fbdev.cpp  test_area.cpp  xine_test.cpp
test/: Makefile.am  printing_test.cpp  surface_bm.cpp  test_app.cpp  test_area.cpp  timer_test.cpp  xine_test.cpp
